--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "@tailwindcss/vite": "^4.1.7",
+    "lenis": "^1.3.4",
+    "motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
